Sun Mar 31 20:03:48 CEST 2013
	Performance improvements, updated documentation.
	Make better use of available memory pool memory for
	reading (especially important for large POST uploads);
	improve post processor speed by internally adjusting the
	buffer size by 4 bytes to ensure "round" IO sizes given
	a "round" post processor buffer size argument.  Note
	that applications that previously added 4 bytes to the
	post processor buffer size might now perform worse. -CG

Fri Mar 29 16:44:29 CET 2013
	Renaming testcases to consistenly begin with test_;
	Changing build system to build examples in doc/.
	Releasing libmicrohttpd 0.9.26. -CG

Thu Mar  7 10:13:08 CET 2013
	Fix bug in postprocessor URL parser (#2818). -jgresula

Mon Mar  4 13:45:35 CET 2013
	Fix dropping of SSL connections if uptime is less than
        MHD_OPTION_CONNECTION_TIMEOUT due to integer underflow (#2802). -greed

Fri Mar  1 01:11:57 CET 2013
	Fully initialize cleanup mutex struct for each thread (#2803). -Ulion

Wed Feb  6 01:51:52 CET 2013
	Releasing libmicrohttpd 0.9.25. -CG

Fri Feb  1 10:19:44 CET 2013
	Handle case where POST data contains "key=" without value
	at the end and is not new-line terminated by invoking the
	callback with the "key" during MHD_destroy_post_processor (#2733). -CG

Wed Jan 30 13:09:30 CET 2013
	Adding more 'const' to allow keeping of reason phrases in ROM.
	(see mailinglist). -CG/MV

Tue Jan 29 21:27:56 CET 2013
	Make code work with PlibC 0.1.7 (which removed plibc_init_utf8).
	Only relevant for W32. Fixes #2734. -CG

Sat Jan 26 21:26:48 CET 2013
	Fixing regression introduced Jan 6 (test on data_size instead
	of total_size. -CG

Fri Jan 11 23:21:55 CET 2013
	Also return MHD_YES from MHD_destroy_post_processor if
	we did not get '\r\n' in the upload. -CG

Sun Jan  6 21:10:13 CET 2013
	Enable use of "MHD_create_response_from_callback" with
	body size of zero. -CG

Tue Dec 25 16:16:30 CET 2012
	Releasing libmicrohttpd 0.9.24. -CG

Tue Dec 18 21:18:11 CET 2012