@@ -1,3 +1,8 @@
+Sun Mar 31 20:27:48 CEST 2013
+	Adding new API call 'MHD_run_from_select' to allow programs
+	running in 'external select mode' to reduce the number of
+	'select' calls by a factor of two. -CG
+
 Sun Mar 31 20:03:48 CEST 2013
 	Performance improvements, updated documentation.
 	Make better use of available memory pool memory for
